--- a/apps/user-app/package.json
+++ b/apps/user-app/package.json
@@ -12,9 +12,12 @@
   },
   "dependencies": {
     "@repo/ui": "*",
+    "@tailwindcss/postcss": "^4.0.16",
     "next": "^15.2.1",
+    "postcss": "^8.5.3",
     "react": "^19.0.0",
-    "react-dom": "^19.0.0"
+    "react-dom": "^19.0.0",
+    "tailwindcss": "^4.0.16"
   },
   "devDependencies": {
     "@repo/eslint-config": "*",
