--- a/apps/user-app/package.json
+++ b/apps/user-app/package.json
@@ -14,6 +14,7 @@
     "@repo/ui": "*",
     "@tailwindcss/postcss": "^4.0.16",
     "next": "^15.2.1",
+    "next-auth": "^4.24.11",
     "postcss": "^8.5.3",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
