--- a/apps/user-app/package.json
+++ b/apps/user-app/package.json
@@ -1,28 +1,22 @@
 {
-  "name": "web",
-  "version": "0.1.0",
+  "name": "user-app",
+  "version": "0.0.0",
   "type": "module",
   "private": true,
   "scripts": {
-    "dev": "next dev --turbopack --port 3000",
+    "dev": "next dev --turbopack ",
     "build": "next build",
     "start": "next start",
     "lint": "next lint --max-warnings 0",
     "check-types": "tsc --noEmit"
   },
   "dependencies": {
-    "@repo/store": "*",
     "@repo/ui": "*",
-    "@repo/db": "*",
     "@tailwindcss/postcss": "^4.0.16",
-    "bcrypt": "^5.1.1",
-    "bcryptjs": "^3.0.2",
     "next": "^15.2.1",
-    "next-auth": "^4.24.11",
     "postcss": "^8.5.3",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
-    "recoil": "^0.7.7",
     "tailwindcss": "^4.0.16"
   },
   "devDependencies": {
