--- a/apps/user-app/package.json
+++ b/apps/user-app/package.json
@@ -13,10 +13,13 @@
   "dependencies": {
     "@repo/ui": "*",
     "@tailwindcss/postcss": "^4.0.16",
+    "bcryptjs": "^3.0.2",
     "next": "^15.2.1",
+    "next-auth": "^4.24.11",
     "postcss": "^8.5.3",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
+    "recoil": "^0.7.7",
     "tailwindcss": "^4.0.16"
   },
   "devDependencies": {
